# raspi-todo

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmessage  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .yamllint.yml  Dockerfile  Makefile  README.md  docker-compose.yml  format.sh  setup-hooks.sh
.git-hooks/: pre-commit
.github/workflows/: deploy.yml
deploy/: deploy.sh  docker-compose.monitoring-only.yml  docker-compose.monitoring.yml  nginx.conf  prometheus-systemd.yml  prometheus.yml  promtail-config.yml  status.sh  todo-app.service
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FORMAT_SETUP.md  PRE_COMMIT.md
server-rs/: Cargo.toml  rustfmt.toml
server-rs/src/: db.rs  error.rs  main.rs  model.rs  routes.rs  ws.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/: favicon-data.txt
web/src/: App.tsx  api.ts  main.tsx  types.ts  ws.ts
web/src/components/: Icon.tsx  TodoDetailModal.tsx
web/src/pages/: Admin.tsx  Categories.tsx  Display.tsx  MyDay.tsx
