[package]
name = "server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "uuid",
  "chrono",
] }

tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
futures = "0.3"

thiserror = "2.0.16"
anyhow = "1"
